cvlr-derive/tests/expand/test_nondet_enum.stderr
error: proc-macro derive panicked
 --> tests/expand/test_nondet_enum.rs:3:10
  |
3 | #[derive(Nondet)]
  |          ^^^^^^
  |
  = help: message: not yet implemented: Enum not supported yet
